--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -23,7 +23,7 @@
             <button id="try">Try it free 7 days <span>then $20/mo. thereafter</span></button>
 
             <div class="form-wrapper">
-                <form name="form" action="" method="post" id="form">
+                <form name="form" action="register" method="/action_page.php" id="form">
                     <input aria-label="First Name" type="text" name="firstname" id="fname" placeholder="First Name">
                     <img src="images/icon-error.svg" alt="" class="error" id="fnameErrorImg">
                     <small id="fnameError" class="warning"></small>
